--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <li><a href="https://github.com/EAGLE-BPN/BiblioTEI2ZoteroRDF">TEI to Zotero RDF conversion xslt</a></li>
   </ul>
 </p>
+        <p>I am often working on <a href="http://epidoc.sourceforge.net/">EpiDoc</a> for <a href="http://www.eagle-network.eu/">EAGLE</a>.</p>
 
 
       </section>
